--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-asgiref==3.5.0
+asgiref==3.7.2
 backports.zoneinfo==0.2.1
-Django==4.1.13
-django-ckeditor==6.2.0
-django-debug-toolbar==3.2.4
-django-environ==0.8.1
-django-js-asset==2.0.0
+Django==4.2.9
+django-ckeditor==6.7.0
+django-debug-toolbar==4.2.0
+django-environ==0.11.2
+django-js-asset==2.2.0
 django-uuslug==2.0.0
-Pillow==10.0.1
-python-slugify==6.1.1
+pillow==10.2.0
+python-slugify==8.0.1
 six==1.16.0
 sqlparse==0.4.4
 text-unidecode==1.3
+typing_extensions==4.9.0
