--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Django==4.2.15
 django-ckeditor==6.6.1
-django-debug-toolbar==4.2.0
-django-environ==0.11.2
-django-js-asset==2.2.0
-django-uuslug==2.0.0
+django-debug-toolbar
+django-environ
+django-js-asset
+django-uuslug
 pillow==10.3.0
-python-slugify==8.0.1
+python-slugify
